<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FrmSincronizar">
    <item
        android:id="@+id/m05_item_producto"
        android:checked="true"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_producto"
        android:titleCondensed="Options"
        app:actionViewClass="android.widget.CheckBox"></item>
    <item
        android:id="@+id/m05_item_pedido"
        android:checked="true"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_pedido"
        android:titleCondensed="Persist"
        app:actionViewClass="android.widget.CheckBox"></item>
    <item
        android:id="@+id/m05_item_bodega"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_bodega"
        android:titleCondensed="Persist"
        app:actionViewClass="android.widget.CheckBox"></item>
    <item
        android:id="@+id/m05_item_camion"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_camion"
        android:titleCondensed="Options"
        app:actionViewClass="android.widget.CheckBox"></item>
    <item
        android:id="@+id/m05_item_conductor"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_conductor"
        android:titleCondensed="Persist"
        app:actionViewClass="android.widget.CheckBox"></item>
    <item
        android:id="@+id/m05_item_operador"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_operador"
        android:titleCondensed="Persist"
        app:actionViewClass="android.widget.CheckBox"></item>
</menu>