<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_dark_onBackground"
    android:orientation="vertical"
    tools:context=".FrmSincronizar">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/md_theme_light_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="Sincronizar datos">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/p05_contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:padding="10dp">

        <TextView
            android:id="@+id/p05_intercambio"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="false"
            android:autoText="false"
            android:gravity="center_horizontal"
            android:text="@string/lbltitulosincronizar"
            android:textColor="@color/seed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/P05_lvinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p05_intercambio"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="110dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColor="@color/seed"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/p05_progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/P05_lvinfo"
            android:layout_marginTop="-110dp"
            android:background="@android:drawable/editbox_background"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/p05_lblInfo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/p05_progressBar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="false"
            android:gravity="left"
            android:paddingStart="10dp"
            android:text="@string/lblinfoDevice"
            android:textColor="@color/seed"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/p05_btnejecutar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p05_lblInfo"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:background="@color/seed"
            android:onClick="Enviar"
            android:text="@string/btnEnviar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/p05_btnejecutar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/p05_lblInfo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:background="@color/seed"
            android:onClick="Recibir"
            android:text="@string/btnRecibir"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>